--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
-group = 'com.github.sondaehyeon.comcigan'
-version = '1.0.0'
+group = 'com.github.ioloolo.comcigan'
+version = '1.0.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -15,4 +16,12 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 }
