--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 plugins {
     id 'java'
-    id 'maven-publish'
 }
 
-group = 'com.github.ioloolo.comcigan'
-version = '1.0.0-SNAPSHOT'
+group = 'com.github.ioloolo'
+version = '2.0.0'
 
 repositories {
     mavenCentral()
@@ -16,12 +15,4 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
 }
